attachment/reply counts on message summaries now no longer wrap line

--- a/less/com/message-summary.less
+++ b/less/com/message-summary.less
@@ -18,10 +18,12 @@
   td:first-child {
     border-left-color: transparent;
   }
+  td:nth-child(2), td:nth-child(3) {
+    white-space: pre;
+  }
   td:last-child {
     border-right-color: transparent;
   }
-
 
   &:hover {
     td {
